--- a/CalculatorCommandParsingLibrary/CalculatorCommandParsingLibrary.csproj
+++ b/CalculatorCommandParsingLibrary/CalculatorCommandParsingLibrary.csproj
@@ -47,6 +47,10 @@
       <Project>{e63d9ec0-a39d-4641-9319-39f8f215aec2}</Project>
       <Name>CommonTypesLibrary</Name>
     </ProjectReference>
+    <ProjectReference Include="..\InterfacesLibrary\InterfacesLibrary.csproj">
+      <Project>{864e7ff0-61e3-4c3a-8830-56ebbd712470}</Project>
+      <Name>InterfacesLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
